welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:12: error: not found: value c
	if(Math.abs(c - 10) == Math.abs(d - 10)){
                    ^close10:15: error: not found: value c
	else if(Math.abs(c - 10) < Math.abs(d - 10)){
                         ^close10:18: error: not found: value c
	else if(Math.abs(c - 10) > Math.abs(d - 10)){
                         ^